// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appends "_focused" to className if hasFocus is true 1`] = `
<button
  className="root_focused"
  onClick={[Function]}
  title="red"
  type="button"
>
  <span>
    red
  </span>
</button>
`;

exports[`appends "_selected" to className if isSelected is true 1`] = `
<button
  className="root_selected"
  onClick={[Function]}
  title="red"
  type="button"
>
  <span>
    red
  </span>
</button>
`;

exports[`renders a Tile correctly 1`] = `
<button
  className="root"
  onClick={[Function]}
  title="red"
  type="button"
>
  <span>
    red
  </span>
</button>
`;
